objects/Account_Plan_Milestones__c.object
<CustomObject>
    <fields>
        <fullName>AP_Objective_Title__c</fullName>
        <description>R1-R-0570-This field indicates the Account Plan Milestone Title value on Account Plan Milestones object.</description>
        <label>AP Objective Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Objective_Name__c</fullName>
        <description>R1-R-0570-This field indicates the Account Plan Milestone Name value on Account Plan Milestones object.</description>
        <label>Account Plan Objective Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>AP_Account_Plan__c</referenceTo>
        <relationshipName>Account_Plan_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_of_completion__c</fullName>
        <label>Percentage of completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>